fix: Add align-center class to align items center

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   border-radius: 5px;
   padding: 10px;
 }
+.align-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 * {
   margin: 0; padding: 0;
@@ -65,17 +70,9 @@ body {
 .num-key {
   flex-basis: 32%;
   border: thin solid black;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .symbol-key {
   flex: 1;
   border: thin solid black;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
